youtube-client/src/assets/styles/style.css
@import url('https://fonts.googleapis.com/css?family=Libre+Franklin');
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300');

@media only screen and (min-width: 600px) {
  :root {
    --cards: 1;
    --w: 200px;
    --m: 10px;
  }
}

@media only screen and (min-width: 1000px) {
  :root {
    --cards: 1;
    --w: 300px;
    --m: 20px;
  }
}

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background: gainsboro;
  font-size: 16px;
  font-family: 'Source Sans Pro', sans-serif;
  font-weight: 300;
  overflow: hidden;
}

#app {
  height: 100vh;
  width: 100vw;
  background-image: radial-gradient(rgba(0, 0, 0, 0.644), rgba(0, 0, 0, 0.904));
  display: flex;
  flex-direction: column;
}

.bottom {
  /* height: 600px; */
  width: calc(var(--cards) * (2 * var(--m) + var(--w)));
  margin: 5vh auto;
  margin-top: unset;
  /* padding: 1em 1em; */
  padding-bottom: 3em;
  flex-grow: 1;
  display: flex;
  /* justify-content: center; */
  align-items: stretch;
  background: rgb(48, 48, 48);
  overflow: hidden;
  transition: width 0.5s;
}

